// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition hook should return with Disclosure props 1`] = `
Object {
  "className": "css-1fie8gx css-63it0p css-1qnz8fc bb-Box bb-DisclosureContent",
  "hidden": true,
  "id": "test",
  "onAnimationEnd": [Function],
  "onTransitionEnd": [Function],
  "style": Object {
    "display": "none",
  },
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-DisclosureContent"
  hidden=""
  id="test"
  style="display: none;"
>
  Hello world
</div>
`;

exports[`composition use should render correctly 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-0[disabled],
.emotion-0[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-0:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-0:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  border-left: 4px solid #cccccc;
  padding: 1.5rem;
}

<div>
  <button
    aria-controls="test"
    aria-expanded="false"
    class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Button bb-Disclosure"
    type="button"
  >
    Toggle
  </button>
  <blockquote
    class="emotion-4 emotion-1 emotion-2 emotion-3 bb-Box bb-Blockquote bb-DisclosureContent"
    hidden=""
    id="test"
    style="display: none;"
  >
    Hello world
  </blockquote>
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 test bb-Box bb-DisclosureContent"
  hidden=""
  id="test"
  style="display: none;"
>
  hello world
</div>
`;

exports[`overrides Disclosure.base should render correctly 1`] = `
.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-DisclosureContent"
  hidden=""
  id="test"
  style="display: none;"
>
  hello world
</div>
`;

exports[`props renders correctly when the hidden is visible 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div>
  <button
    aria-controls="test"
    aria-expanded="true"
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-Disclosure"
    type="button"
  >
    Toggle
  </button>
  <div
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-DisclosureContent"
    id="test"
  >
    Hello world
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div>
  <button
    aria-controls="test"
    aria-expanded="false"
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-Disclosure"
    type="button"
  >
    Toggle
  </button>
  <div
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-DisclosureContent"
    hidden=""
    id="test"
    style="display: none;"
  >
    Hello world
  </div>
</div>
`;

exports[`theming Disclosure.base should render correctly 1`] = `
.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-DisclosureContent"
  hidden=""
  id="test"
  style="display: none;"
>
  hello world
</div>
`;
